--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/IhorLeonov/project_group_20/issues"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
