--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://IhorLeonov.github.io/project_group_20",
+  "homepage": "https://IhorLeonov.github.io/ice-cream_team-project",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /project_group_20/"
+    "build": "parcel build src/*.html --public-url /ice-cream_team-project/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/IhorLeonov/project_group_20.git"
+    "url": "git+https://github.com/IhorLeonov/ice-cream_team-project.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/IhorLeonov/project_group_20/issues"
+    "url": "https://github.com/IhorLeonov/ice-cream_team-project/issues"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
